fix overflow property

--- a/src/styles.css
+++ b/src/styles.css
@@ -146,7 +146,6 @@ body {
 
 body {
     font-size: 16px;
-    overflow: hidden;
 }
 
 @media (min-width: 1320px) {
